[gd_scene load_steps=16 format=3 uid="uid://dsvqr4ardujl"]

[ext_resource type="Script" uid="uid://de6v8nlkj5cqg" path="res://放置宗门/UI/main_node.gd" id="1_yla30"]
[ext_resource type="Script" uid="uid://duu7jc2rbipt0" path="res://放置宗门/entity/zong_men.gd" id="2_hdk05"]
[ext_resource type="Script" uid="uid://b8mr85g2n22w1" path="res://放置宗门/UI/操作面板/宗主操作.gd" id="2_t5jbs"]
[ext_resource type="Script" uid="uid://d1d78u0sect1l" path="res://放置宗门/UI/材料面板/材料面板.gd" id="2_yxka3"]
[ext_resource type="PackedScene" uid="uid://dhsl1ejuejq86" path="res://放置宗门/UI/操作面板/冷却Button.tscn" id="3_ad34k"]
[ext_resource type="Script" uid="uid://tmalckgynjiu" path="res://放置宗门/entity/people.gd" id="3_miuyq"]
[ext_resource type="PackedScene" uid="uid://q7x6nnytp6pd" path="res://放置宗门/UI/核心面板/人员分配/人员分配.tscn" id="5_2nmkh"]
[ext_resource type="PackedScene" uid="uid://bgn3gr517oeht" path="res://放置宗门/UI/核心面板/建造/建筑UI.tscn" id="5_ay4gp"]
[ext_resource type="Script" uid="uid://c62r2yhaqw4tq" path="res://放置宗门/UI/数据/人员分配数据/施工队.gd" id="8_8wg14"]
[ext_resource type="Script" uid="uid://b5l0jsqbd0del" path="res://放置宗门/entity/建筑.gd" id="8_35r14"]
[ext_resource type="Script" uid="uid://6d3eldidsgch" path="res://放置宗门/entity/消耗资源.gd" id="9_3yc33"]
[ext_resource type="Script" uid="uid://yxik1cvgile6" path="res://放置宗门/UI/数据/人员分配数据/空闲人员.gd" id="9_8wg14"]
[ext_resource type="Script" uid="uid://dega3r8av1ver" path="res://放置宗门/UI/数据/人员分配数据/凡人总人数.gd" id="11_lr7dj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hdk05"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_miuyq"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="MainNode" type="Control" node_paths=PackedStringArray("zongMen")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yla30")
zongMen = NodePath("data/ZongMen")

[node name="UI" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hdk05")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 2

[node name="材料面板" type="PanelContainer" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_miuyq")
script = ExtResource("2_yxka3")

[node name="GridContainer" type="GridContainer" parent="UI/VBoxContainer/材料面板"]
layout_mode = 2
columns = 4

[node name="木材" type="Label" parent="UI/VBoxContainer/材料面板/GridContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
text = "木材：000"

[node name="凡人数量" type="Label" parent="UI/VBoxContainer/材料面板/GridContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
text = "凡人数量：000/1000"

[node name="操作面板" type="PanelContainer" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_miuyq")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/操作面板"]
layout_mode = 2

[node name="宗主操作" type="GridContainer" parent="UI/VBoxContainer/操作面板/HBoxContainer" node_paths=PackedStringArray("宗主")]
layout_mode = 2
script = ExtResource("2_t5jbs")
"宗主" = NodePath("../../../../../data/ZongMen/宗主")

[node name="自动Tips" type="CheckBox" parent="UI/VBoxContainer/操作面板/HBoxContainer/宗主操作"]
layout_mode = 2
text = "未开启自动操作"

[node name="伐木" parent="UI/VBoxContainer/操作面板/HBoxContainer/宗主操作" instance=ExtResource("3_ad34k")]
layout_mode = 2
text = "伐木"

[node name="探索" parent="UI/VBoxContainer/操作面板/HBoxContainer/宗主操作" instance=ExtResource("3_ad34k")]
layout_mode = 2
text = "探索"

[node name="核心面板" type="PanelContainer" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_miuyq")

[node name="TabBar" type="TabContainer" parent="UI/VBoxContainer/核心面板"]
layout_mode = 2
current_tab = 0

[node name="建筑" type="PanelContainer" parent="UI/VBoxContainer/核心面板/TabBar"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/核心面板/TabBar/建筑"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "小木屋Lv.1"

[node name="Button" type="Button" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
text = "查看详情"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
text = "小木屋"

[node name="Button" type="Button" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
text = "查看详情"

[node name="Tips" type="PanelContainer" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/Tips"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/Tips/VBoxContainer"]
layout_mode = 2
text = "名称：小木屋Lv.1"

[node name="Label2" type="RichTextLabel" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/Tips/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "描述：能够容纳xxx个凡人"

[node name="GridContainer" type="GridContainer" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/Tips/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Button" type="Button" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/Tips/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "升级"

[node name="Button2" type="Button" parent="UI/VBoxContainer/核心面板/TabBar/建筑/HBoxContainer/Tips/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "拆除"

[node name="建造" type="PanelContainer" parent="UI/VBoxContainer/核心面板/TabBar"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="GridContainer" type="GridContainer" parent="UI/VBoxContainer/核心面板/TabBar/建造"]
layout_mode = 2
columns = 4

[node name="PanelContainer" parent="UI/VBoxContainer/核心面板/TabBar/建造/GridContainer" instance=ExtResource("5_ay4gp")]
layout_mode = 2

[node name="人员分配" parent="UI/VBoxContainer/核心面板/TabBar" instance=ExtResource("5_2nmkh")]
visible = false
layout_mode = 2

[node name="data" type="Node" parent="."]

[node name="ZongMen" type="Node" parent="data" node_paths=PackedStringArray("凡人总人数", "施工队", "空闲人员", "宗主")]
script = ExtResource("2_hdk05")
"凡人总人数" = NodePath("../默认数据/人员分配数据/凡人总人数")
"施工队" = NodePath("../默认数据/人员分配数据/施工队")
"空闲人员" = NodePath("../默认数据/人员分配数据/空闲凡人人数")
"宗主" = NodePath("宗主")
metadata/_custom_type_script = "uid://duu7jc2rbipt0"

[node name="宗主" type="Node" parent="data/ZongMen" node_paths=PackedStringArray("所在宗门")]
script = ExtResource("3_miuyq")
"伐木单位量" = 10
"所在宗门" = NodePath("..")
metadata/_custom_type_script = "uid://tmalckgynjiu"

[node name="默认数据" type="Node" parent="data"]

[node name="建筑" type="Node" parent="data/默认数据"]

[node name="小木屋" type="Node" parent="data/默认数据/建筑" node_paths=PackedStringArray("消耗资源")]
script = ExtResource("8_35r14")
"名称" = "小木屋"
description = "每一间住房，可以提供4人居住"
"消耗资源" = NodePath("NeedResource")
"建筑消耗时间" = 1000
metadata/_custom_type_script = "uid://b5l0jsqbd0del"

[node name="NeedResource" type="Node" parent="data/默认数据/建筑/小木屋"]
script = ExtResource("9_3yc33")
"木材" = 1000
metadata/_custom_type_script = "uid://6d3eldidsgch"

[node name="人员分配数据" type="Node" parent="data/默认数据"]
unique_name_in_owner = true

[node name="凡人总人数" type="Node" parent="data/默认数据/人员分配数据"]
script = ExtResource("11_lr7dj")
"名称" = "凡人总人数"
value = 10
value_max = 10
disable = true
disc = "凡人"
metadata/_custom_type_script = "uid://dogg5bs5ko7wn"

[node name="空闲凡人人数" type="Node" parent="data/默认数据/人员分配数据"]
script = ExtResource("9_8wg14")
"名称" = "空闲凡人人数"
disable = true
disc = "没有工作，无所事事的闲散人员"
metadata/_custom_type_script = "uid://dogg5bs5ko7wn"

[node name="施工队" type="Node" parent="data/默认数据/人员分配数据"]
script = ExtResource("8_8wg14")
"名称" = "施工队"
metadata/_custom_type_script = "uid://dogg5bs5ko7wn"

[connection signal="pressed" from="UI/VBoxContainer/操作面板/HBoxContainer/宗主操作/伐木" to="UI/VBoxContainer/操作面板/HBoxContainer/宗主操作" method="_on_伐木_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/操作面板/HBoxContainer/宗主操作/探索" to="UI/VBoxContainer/操作面板/HBoxContainer/宗主操作" method="_on_探索_pressed"]
